--- a/styleclg.css
+++ b/styleclg.css
@@ -2,11 +2,11 @@ body {
 	font-family: Arial, sans-serif;
 	margin: 0;
 	padding: 0;
-	background-color: #f2f2f2;
+	background-color: #fffcfc;
 }
 
 header {
-	background-color: #005a9c;
+	background-color: #131413;
 	color: white;
 	padding: 10px 0;
 	text-align: center;
